--- a/final.ipynb
+++ b/final.ipynb
@@ -2910,23 +2910,6 @@
    ]
   },
   {
-<<<<<<< HEAD
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f0afc248",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Heatmap\n",
-    "sns.set()\n",
-    "plt.figure(figsize=(20,28))\n",
-    "heatmap = sns.heatmap(train.corr()[['winningTeam']].sort_values(by='winningTeam', ascending=False), vmin=-.50, vmax=.50, annot=True)\n",
-    "heatmap.set_title('Feautures Correlating with winningTeam')"
-   ]
-  },
-  {
-=======
->>>>>>> 6d2589fe45f92e12854c2abbca8702c7044b6536
    "cell_type": "markdown",
    "id": "fa77f25b",
    "metadata": {},
@@ -3024,24 +3007,17 @@
     "if p < alpha:\n",
     "    print(\"blue and red populations do not have equal variances\")\n",
     "else:\n",
-<<<<<<< HEAD
-    "    print(\"blue and red populations do have equal variances\")\n"
+    "    print(\"blue and red populations do have equal variances\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a79193ae",
+   "cell_type": "markdown",
+   "id": "0f6b5c9e",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "plt.figure(figsize=(10,5))\n",
-    "sns.scatterplot(x='BlueTeamTotalGoldDifference',y='BlueTeamLevelDifference',data=train,hue='winningTeam', palette='colorblind')\n",
-    "plt.title('Blue Team Gold and Level difference based on winning team', fontsize = 20)\n",
-    "plt.show()"
-=======
-    "    print(\"blue and red populations do have equal variances\")"
->>>>>>> 6d2589fe45f92e12854c2abbca8702c7044b6536
+    "## $H_0$: Red team that loses less then 5 towers will not give the blue team victory\n",
+    "\n",
+    "## $H_a$: Red team that loses more then 5 towers will give the blue team the victory"
    ]
   },
   {
@@ -3050,16 +3026,6 @@
    "metadata": {},
    "source": [
     "# Hypothesis Testing"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0f6b5c9e",
-   "metadata": {},
-   "source": [
-    "## $H_0$: Blue team's gold difference over 40 and blue team's level difference over 1  is not significant\n",
-    "\n",
-    "## $H_a$: Blue team's gold difference over 40 and blue team's level difference over 1  is not significant"
    ]
   },
   {
@@ -3081,15 +3047,12 @@
     }
    ],
    "source": [
-    "import scipy.stats as stats\n",
-    "# hypothesis testing\n",
-    "\n",
-    "null_hypothesis = \"Blue team's gold difference over 40 and blue team's level difference over 1  is not significant\"\n",
-    "alternative_hypothesis = \"Blue team's gold difference under 40 and blue team's level difference under 1 is significant\"\n",
+    "null_hypothesis = \"Red team towers lost < 5 has no difference in the outcome of the game\"\n",
+    "alternative_hypothesis = \"Red team towers lost > 5 has a difference in the outcome of the game\"\n",
     "a = 0.05 #a for alpha \n",
     "\n",
-    "big_loss = train[train.BlueTeamTotalGoldDifference > 40]\n",
-    "little_loss = train[train.BlueTeamLevelDifference >= 1]\n",
+    "big_loss = train[train.towers_lost_team200 > 5]\n",
+    "little_loss = train[train.towers_lost_team200 <= 5]\n",
     "t, p = stats.ttest_ind(big_loss.winningTeam, little_loss.winningTeam)\n",
     "print(p)\n",
     "if p < a:\n",
@@ -3106,7 +3069,7 @@
    "source": [
     "### Hypothesis Results:\n",
     "\n",
-    "- There is no difference if the blue teams gold difference is over 40 and blue team's level difference is greater then or equal to 1 that could impact the results of game"
+    "    There is a difference when the red team loses 5 or more towers that will give the blue team the victory"
    ]
   },
   {
@@ -3116,8 +3079,9 @@
    "source": [
     "### Takeaways\n",
     "\n",
-    "- I have a 95% confidence level that there is no difference in outcome when blue team gold difference is over 40 and team level difference is over 1\n",
-    "    "
+    "    I have a 95% confidence level that there is a difference in outcome when red team loses 5 or more towers\n",
+    "    Red and blue team towers lost averages are almost identical\n",
+    "    Red or blue towers lost could be useful in the modeling phase"
    ]
   },
   {
@@ -3126,7 +3090,7 @@
    "metadata": {},
    "source": [
     "### Question 2\n",
-    "- Is there a correlation between 'Blue Team Physical Damage Difference and Blue Team Kda Difference"
+    "    Is there a correlation between Blue team xp, red team xp and the outcome of the game"
    ]
   },
   {
@@ -3144,12 +3108,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# univariate study\n",
-    "univariate_study = ['BlueTeamPhysicalDmgDifference','BlueTeamKdaDifference']\n",
+    "univariate_study = ['BlueTeamXp','RedTeamXp']\n",
     "\n",
     "for i in univariate_study:\n",
     "    explore_univariate(train, i)\n",
     "    print(f'Summary Statistics for {i}\\n{train[i].describe()}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8088e50",
+   "metadata": {},
+   "source": [
+    "    Blue team averaged 41,253 xp and Red team averaged 41,593 xp\n",
+    "    Both teams xp's are normally distributed"
    ]
   },
   {
@@ -3169,13 +3141,13 @@
    "source": [
     "# From the scypi stats library, im going to use the levene test to check variance.\n",
     "# It will test the null hypothesis that all input samples are from populations with equal variances.\n",
-    "stats, p = levene(train.BlueTeamPhysicalDmgDifference, train.BlueTeamKdaDifference)\n",
+    "stats, p = levene(df.BlueTeamXp, df.RedTeamXp)\n",
     "print(stats, p)\n",
     "alpha = .05\n",
     "if p < alpha:\n",
     "    print(\"blue and red populations do not have equal variances\")\n",
     "else:\n",
-    "    print(\"blue and red populations do have equal variances\")\n"
+    "    print(\"blue and red populations do have equal variances\")"
    ]
   },
   {
@@ -3187,8 +3159,6 @@
    ]
   },
   {
-<<<<<<< HEAD
-=======
    "cell_type": "code",
    "execution_count": 28,
    "id": "ed0fc6e4",
@@ -3223,22 +3193,44 @@
    ]
   },
   {
->>>>>>> 6d2589fe45f92e12854c2abbca8702c7044b6536
    "cell_type": "markdown",
-   "id": "ab2b0ed6",
+   "id": "a79bdc90",
    "metadata": {},
    "source": [
-    "## $H_0$: Blue team's physical damage difference over -85 and blue team's kda difference over 0  is not significant\n",
+    "### Hypothesis Results:\n",
+    "    There is a difference when the red team has more then 41k xp vs less then 41k xp that could lead to a blue team win"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "263beb23",
+   "metadata": {},
+   "source": [
+    "### Takeaways\n",
     "\n",
-    "## $H_a$: Blue team's physical damage difference under -85 and blue team's kda difference under 0  is not significant"
+    "    I have a 95% confidence level that there is a difference in outcome when red team has more then 41k xp\n",
+    "    Red and blue team xp means are almost the same\n",
+    "    Red or blue xp could be useful in the modeling phase"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64bc1378",
+   "metadata": {},
+   "source": [
+    "# Bivariate"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd27893c",
+   "metadata": {},
+   "source": [
+    "## Physical Damage"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": null,
-   "id": "ed0fc6e4",
-=======
    "execution_count": 29,
    "id": "3f4dc01a",
    "metadata": {},
@@ -3294,19 +3286,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b4fc2099",
->>>>>>> 6d2589fe45f92e12854c2abbca8702c7044b6536
    "metadata": {},
    "outputs": [],
    "source": [
-    "# hypothesis testing\n",
-    "import scipy.stats as stats\n",
-    "null_hypothesis = \"Blue team's physical damage difference under -85 and blue team's kda difference under 0 is not significant\"\n",
-    "alternative_hypothesis = \"Blue team's physical damage difference over -85 and blue team's kda difference over 0 is significant\"\n",
+    "null_hypothesis = \"BlueTeamPhysicalDamageDoneToChampions > 20,000 has no difference in the outcome of the game\"\n",
+    "alternative_hypothesis = \"BlueTeamPhysicalDamageDoneToChampions < 20,000 has a difference in the outcome of the game\"\n",
     "a = 0.05 #a for alpha \n",
     "\n",
-    "big_xp = train[train.BlueTeamPhysicalDmgDifference > -85]\n",
-    "little_xp = train[train.BlueTeamKdaDifference >= 0]\n",
-    "t, p = stats.ttest_ind(big_xp.winningTeam, little_xp.winningTeam)\n",
+    "big_damage = train[train.BlueTeamPhysicalDamageDoneToChampions > 20_000]\n",
+    "little_damage = train[train.BlueTeamPhysicalDamageDoneToChampions <= 20_000]\n",
+    "t, p = stats.ttest_ind(big_damage.winningTeam, little_damage.winningTeam)\n",
     "print(p)\n",
     "if p < a:\n",
     "    print(f'Reject null hypothesis that: {null_hypothesis}')\n",
@@ -3316,14 +3305,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "484b7d97",
+   "metadata": {},
+   "source": [
+    "    Team damage over 20k does not effect the outcome of the game"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57b03c86",
+   "metadata": {},
+   "source": [
+    "## Team Level "
+   ]
+  },
+  {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": null,
-   "id": "0903ab39",
-=======
    "execution_count": 31,
    "id": "743b0ac3",
->>>>>>> 6d2589fe45f92e12854c2abbca8702c7044b6536
    "metadata": {},
    "outputs": [
     {
@@ -3347,18 +3347,16 @@
     }
    ],
    "source": [
-    "plt.figure(figsize=(10,5))\n",
-    "sns.scatterplot(x='BlueTeamPhysicalDmgDifference',y='BlueTeamKdaDifference',data=train,hue='winningTeam', palette='colorblind')\n",
-    "plt.title('Blue Team physical damage and kda difference based on winning team', fontsize = 20)\n",
+    "#winningTeam across team level for blue team\n",
+    "print('Team level blue and outcome')\n",
+    "sns.jointplot(x='BlueTeamLevel', y='winningTeam', data=train)\n",
+    "plt.xlabel('Team Level')\n",
+    "plt.ylabel('Winning Team')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
-<<<<<<< HEAD
-   "id": "a79bdc90",
-   "metadata": {},
-=======
    "id": "ae320ab6",
    "metadata": {},
    "source": [
@@ -3451,40 +3449,37 @@
      "output_type": "display_data"
     }
    ],
->>>>>>> 6d2589fe45f92e12854c2abbca8702c7044b6536
    "source": [
-    "### Hypothesis Results:\n",
-    "    Blue team's physical damage difference over -85 and blue team's kda difference over 0 is significant"
+    "#winningTeam across team ward for blue team\n",
+    "print('Team ward blue and outcome')\n",
+    "sns.jointplot(x='BlueTeamWards', y='winningTeam', data=train)\n",
+    "plt.xlabel('Team Ward')\n",
+    "plt.ylabel('Winning Team')\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "263beb23",
+   "id": "2df56c67",
    "metadata": {},
    "source": [
-    "### Takeaways\n",
+    "## Ho: Blue team wards less then 88 will not make a difference in the outcome of the game\n",
     "\n",
-    "    I have a 95% confidence level that there is a difference in outcome when Blue team's physical damage difference is over -85 and blue team's kda difference over 0 is significant"
+    "## Ha: Blue team wards greater then 88 will make a difference in the outcome of the game"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "dd27893c",
+   "id": "82b7ea2b",
    "metadata": {},
    "source": [
-    "## Question 3\n",
-    "- Is there a correlation between Blue team ward difference and blue team's minion kill difference that will effect the outcome of the game"
+    "# Hypothesis Testing"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": null,
-   "id": "3f4dc01a",
-=======
    "execution_count": 34,
    "id": "593d6c8b",
->>>>>>> 6d2589fe45f92e12854c2abbca8702c7044b6536
    "metadata": {},
    "outputs": [
     {
@@ -3500,15 +3495,10 @@
     }
    ],
    "source": [
-    "# univariate study\n",
-    "univariate_study = ['BlueTeamWardDifference',\n",
-    "       'BlueTeamminionKillDifference']\n",
+    "null_hypothesis = \"BlueTeamWards < 88 has no difference in the outcome of the game\"\n",
+    "alternative_hypothesis = \"BlueTeamWards > 88 has a difference in the outcome of the game\"\n",
+    "a = 0.05 #a for alpha \n",
     "\n",
-<<<<<<< HEAD
-    "for i in univariate_study:\n",
-    "    explore_univariate(train, i)\n",
-    "    print(f'Summary Statistics for {i}\\n{train[i].describe()}')"
-=======
     "big_ward = train[train.BlueTeamWards > 88]\n",
     "little_ward = train[train.BlueTeamAssists > 22]\n",
     "t, p = stats.ttest_ind(big_ward.winningTeam, little_ward.winningTeam)\n",
@@ -3561,35 +3551,30 @@
     "plt.xlabel('winningTeam')\n",
     "plt.ylabel('BlueTeamAssists')\n",
     "plt.show()"
->>>>>>> 6d2589fe45f92e12854c2abbca8702c7044b6536
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "26fad2c1",
+   "id": "c2f02723",
    "metadata": {},
    "source": [
-    "- blue team wards and minion kill difference are normally distributed\n",
-    "- blue team ward and minion kill difference are averaging the same"
+    "## Ho: Blue team with assists under 22 will not have a difference in the outcome of the game\n",
+    "\n",
+    "## Ha: Blue team with assists over 22 will have a difference in the outcome of the game"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6c302249",
+   "id": "ca564088",
    "metadata": {},
    "source": [
-    "# Man Whitney U"
+    "# Hypothesis Testing"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": null,
-   "id": "e9873bf5",
-=======
    "execution_count": 36,
    "id": "b59835c0",
->>>>>>> 6d2589fe45f92e12854c2abbca8702c7044b6536
    "metadata": {},
    "outputs": [
     {
@@ -3605,17 +3590,18 @@
     }
    ],
    "source": [
-    "# From the scypi stats library, im going to use the levene test to check variance.\n",
-    "# It will test the null hypothesis that all input samples are from populations with equal variances.\n",
-    "stats, p = levene(train.BlueTeamWardDifference, train.BlueTeamminionKillDifference)\n",
-    "print(stats, p)\n",
-    "alpha = .05\n",
-    "if p < alpha:\n",
-    "    print(\"blue and red populations do not have equal variances\")\n",
+    "null_hypothesis = \"BlueTeamAssists < 22 has no difference in the outcome of the game\"\n",
+    "alternative_hypothesis = \"BlueTeamAssists > 22 has a difference in the outcome of the game\"\n",
+    "a = 0.05 #a for alpha \n",
+    "\n",
+    "big_assists = train[train.BlueTeamAssists > 22]\n",
+    "little_assists = train[train.BlueTeamAssists <= 22]\n",
+    "t, p = stats.ttest_ind(big_assists.winningTeam, little_assists.winningTeam)\n",
+    "print(p)\n",
+    "if p < a:\n",
+    "    print(f'Reject null hypothesis that: {null_hypothesis}')\n",
+    "    print (f'There is evidence to suggest: {alternative_hypothesis}')\n",
     "else:\n",
-<<<<<<< HEAD
-    "    print(\"blue and red populations do have equal variances\")\n"
-=======
     "    print(f'Fail to reject null hypothesis that: {null_hypothesis} There is not sufficient evidence to reject it.')"
    ]
   },
@@ -3670,20 +3656,17 @@
     "## Ho: Red team that loses less then 5 towers will not have a difference in the outcome of the game\n",
     "\n",
     "## Ha: Red team that loses more then 5 towers will have a difference in the outcome of the game"
->>>>>>> 6d2589fe45f92e12854c2abbca8702c7044b6536
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ebbaed94",
+   "id": "fe321003",
    "metadata": {},
    "source": [
     "# Hypothesis Testing"
    ]
   },
   {
-<<<<<<< HEAD
-=======
    "cell_type": "code",
    "execution_count": 40,
    "id": "29aff06f",
@@ -3753,25 +3736,17 @@
    ]
   },
   {
->>>>>>> 6d2589fe45f92e12854c2abbca8702c7044b6536
    "cell_type": "markdown",
-   "id": "8ab44180",
+   "id": "1e324091",
    "metadata": {},
    "source": [
-    "## $H_0$: Blue team's ward difference over 0 and blue team's minion kills difference over 0  is not significant\n",
-    "\n",
-    "## $H_a$: Blue team's gold difference under 0 and blue team's minion kills difference under 0  is not significant"
+    "# Hypothesis Testing"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": null,
-   "id": "b4fc2099",
-=======
    "execution_count": 42,
    "id": "7a070c10",
->>>>>>> 6d2589fe45f92e12854c2abbca8702c7044b6536
    "metadata": {},
    "outputs": [
     {
@@ -3787,15 +3762,13 @@
     }
    ],
    "source": [
-    "# hypothesis testing\n",
-    "import scipy.stats as stats\n",
-    "null_hypothesis = \"Blue team's ward difference over 0 and blue team's minion kills difference over 0  is not significant\"\n",
-    "alternative_hypothesis = \"Blue team's gold difference under 0 and blue team's minion kills difference under 0  is not significant\"\n",
+    "null_hypothesis = \"Blue team takes < 2 dragons has no difference in the outcome of the game\"\n",
+    "alternative_hypothesis = \"Blue team takes > 2 dragons has a difference in the outcome of the game\"\n",
     "a = 0.05 #a for alpha \n",
     "\n",
-    "big_xp = train[train.BlueTeamWardDifference > 0]\n",
-    "little_xp = train[train.BlueTeamminionKillDifference >= 0]\n",
-    "t, p = stats.ttest_ind(big_xp.winningTeam, little_xp.winningTeam)\n",
+    "big_gain = train[train.dragon_team100 > 2]\n",
+    "little_gain = train[train.dragon_team100 <= 2]\n",
+    "t, p = stats.ttest_ind(big_gain.winningTeam, little_gain.winningTeam)\n",
     "print(p)\n",
     "if p < a:\n",
     "    print(f'Reject null hypothesis that: {null_hypothesis}')\n",
@@ -3806,11 +3779,36 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63049979",
+   "id": "5ea3f0de",
    "metadata": {},
    "source": [
-    "### Hypothesis Results:\n",
-    "- with a p value of .06 there maybe some reason to believe that the blue team's wards difference and minion kill difference over 0 maybe significant"
+    "## Multivariate "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2595fc7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(10,5))\n",
+    "sns.scatterplot(x='dragon_team100',y='BlueTeamAssists',data=train,hue='winningTeam', palette='colorblind')\n",
+    "plt.title('Blue Dragons Taken and Blue Assists based on winning team', fontsize = 20)\n",
+    "plt.show()\n",
+    "\n",
+    "big_assists = train[train.dragon_team100 > 0]\n",
+    "little_assists = train[train.BlueTeamAssists > 0]\n",
+    "t, p = stats.ttest_ind(big_assists.winningTeam, little_assists.winningTeam)\n",
+    "print(p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "460abcb7",
+   "metadata": {},
+   "source": [
+    "    Blue team more then likely to win if the assist were above 30 and 2 or more dragons killed"
    ]
   },
   {
